nifi-frontend/src/main/frontend/apps/nifi-jolt-transform-ui/src/app/pages/jolt-transform-json-ui/feature/_jolt-transform-json-ui.component-theme.scss
/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

@use 'sass:map';
@use '@angular/material' as mat;

@mixin generate-theme($material-theme, $supplemental-theme) {
    .jolt-transform-json-ui {
        @include mat.button-density(-1);

        .mat-mdc-form-field {
            width: 100%;
        }

        .output-editor {
            .CodeMirror.cm-s-nifi {
                height: calc(100vh - 180px);
                min-height: 345px;
            }
        }

        .jolt-spec-editor {
            .CodeMirror.cm-s-nifi {
                height: calc(100vh - 422px);
            }
        }

        .input-editor {
            .CodeMirror.cm-s-nifi {
                height: calc(100vh - 414px);
                min-height: 116px;
            }
        }

        .attributes-editor {
            height: calc(100vh - 362px);
            min-height: 168px;
        }
    }
}

